--- a/header.html
+++ b/header.html
@@ -22,8 +22,21 @@
                         <li><a href="#">English</a></li>
                     </ul>
                 </div>
-                <div class="custom-header-auth">
+                <!-- <div class="custom-header-auth">
                     <a href="#"><i class="ri-user-fill"></i> Login</a>
+                </div> -->
+                <div class="custom-header">
+
+                    <span id="user-info"></span>
+
+                    <a href="signin.html" id="login-link">
+
+                        <i class="ri-user-fill"></i>
+                        Login
+
+                    </a>
+                    <button id="logout-btn" style="display: none;">Logout</button>
+
                 </div>
             </div>
         </div>
@@ -47,6 +60,6 @@
             </ul>
             <!-- <div class="custom-cart-price">item: <span>$150.00</span></div> -->
         </div>
-      
+
     </div>
 </header>
