--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/loader.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/appwrite@16.0.2"></script>
 
     <!-- Css Styles -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
@@ -23,6 +24,13 @@
 
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.10.0/toastify.js"
+        integrity="sha512-mwSdINqQLRATPXGW3x8ce1DFtv+qX8V1sq1ciyGdOyqtFGbU6oU2a+o3ol5QcoXfiX9pI6gZOq9i3k14AQL0UQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.10.0/toastify.css"
+        integrity="sha512-aTSfPrXKMZ4BMWKzbM4VFTAuI3rPpTpBlt830eRuGVNcGsEtbjdZvrgBFmSQATMgvGFKjdXiLa7rDY82LJ6/eQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 
@@ -600,7 +608,7 @@
 
     </main>
 
-    <script src="js/injectHeader.js"></script>
+    <script type="module" src="js/injectHeader.js"></script>
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- <script src="/js/script.js"></script> -->
@@ -673,7 +681,9 @@
 
 
     </script>
-    <script src="/js/fetchCategories.js"></script>
+    <script src="/js/fetchCategories.js">
+
+    </script>
 </body>
 
 </html>
